--- a/wedding-wise-app/package.json
+++ b/wedding-wise-app/package.json
@@ -5,13 +5,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.15",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
     "@mui/x-charts": "^7.3.1",
     "@mui/x-date-pickers": "^7.2.0",
+    "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "cssjanus": "^2.1.0",
     "dayjs": "^1.11.10",
