--- a/wedding-wise-app/package.json
+++ b/wedding-wise-app/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.10",
     "emoji-picker-react": "^4.11.1",
     "firebase": "^10.12.3",
+    "firebase-admin": "^12.3.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.22.3",
