--- a/wedding-wise-app/package.json
+++ b/wedding-wise-app/package.json
@@ -23,7 +23,9 @@
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
     "stylis": "^4.3.1",
     "stylis-plugin-rtl": "^2.1.1",
     "timeago-react": "^3.0.6",
