--- a/wedding-wise-app/package.json
+++ b/wedding-wise-app/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.12.3",
     "firebase-admin": "^12.3.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
